exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  } />
`;

exports[`test renders header with a null button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with buttons 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with buttons and subtitle 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "color": "#8e8e93",
            "fontSize": 12,
          }
        }>
        Subtitle
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
</View>
`;

exports[`test renders header with just one button and iconRight 1`] = `
<View
  iconRight={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with just one button and subtitle 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "color": "#8e8e93",
            "fontSize": 12,
          }
        }>
        Subtitle
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
</View>
`;

exports[`test renders header with just one button, iconRight and a subtitle 1`] = `
<View
  iconRight={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 13,
      }
    }>
    <View
      style={
        Object {
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "color": "#000",
            "fontFamily": "HelveticaNeue",
            "fontSize": 17,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }>
        Header
      </Text>
    </View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "color": "#8e8e93",
            "fontSize": 12,
          }
        }>
        SubTitle
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "flex": 3,
      }
    } />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginRight": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "color": "#007aff",
              "fontSize": 34,
              "lineHeight": 36,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders header with searchbar 1`] = `
<View
  rounded={true}
  searchBar={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8F8F8",
      "elevation": 3,
      "flexDirection": "row",
      "height": 64,
      "justifyContent": "space-between",
      "paddingHorizontal": 15,
      "paddingLeft": undefined,
      "paddingTop": 15,
      "position": "relative",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 1.5,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "marginLeft": -7,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CECDD2",
          "borderColor": "transparent",
          "borderLeftWidth": 0,
          "borderRadius": 25,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 30,
          "paddingLeft": 5,
          "paddingRight": 5,
          "position": "relative",
        }
      }
      toolbar={true}>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "alignSelf": "center",
              "color": "#000",
              "fontSize": 20,
              "lineHeight": 20,
              "marginLeft": 5,
              "marginTop": 2,
              "paddingRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
      <View
        style={
          Object {
            "flex": 1,
          }
        }>
        <TextInput
          editable={undefined}
          placeholder="Search"
          placeholderTextColor="#575757"
          style={
            Object {
              "color": "#000",
              "fontSize": 15,
              "fontFamily": "HelveticaNeue",              
              "height": 30,
              "lineHeight": 24,
              "marginTop": undefined,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          toolbar={true}
          underlineColorAndroid="rgba(0,0,0,0)" />
      </View>
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Object {
              "alignSelf": "center",
              "color": "#000",
              "fontSize": 20,
              "lineHeight": 20,
              "marginLeft": 5,
              "marginTop": 2,
              "paddingRight": 5,
            },
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }>
        
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginRight": -14,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(0,0,0,0)",
          "borderColor": "#5067FF",
          "borderRadius": 5,
          "borderWidth": 0,
          "elevation": 0,
          "flexDirection": "row",
          "height": 38,
          "justifyContent": "space-around",
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingVertical": 6,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#007aff",
            "fontFamily": "HelveticaNeue",
            "fontSize": 16.5,
            "lineHeight": 19,
            "marginLeft": 0,
            "marginRight": 0,
          }
        }>
        Search
      </Text>
    </View>
  </View>
</View>
`;
